--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'jacoco'
 
 repositories {
     mavenCentral()
@@ -11,8 +12,4 @@ dependencies {
 
 test {
     outputs.upToDateWhen { false }
-}
-
-plugins {
-    id 'jacoco'
 }
